--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,16 +3,16 @@ body {
   height: 100%;
 }
 
-.navbar-lewagon {
+.navbar-parkbot {
   justify-content: space-between;
   background: white;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-parkbot .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-parkbot .navbar-brand img {
   width: 40px;
 }
 
