--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
+<div class="navbar navbar-expand-sm navbar-light navbar-parkbot sticky-top">
   <%= link_to "/", class: "navbar-brand" do %>
     <i class="fas fa-robot"></i>
     <h3>ParkBot</h3>
